# llm-math-education

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  DEVELOPMENT.md  Dockerfile.streamlit  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  streamlit-requirements.txt
.github/workflows/: deploy_streamlit.yaml
.streamlit/: .gitignore
boneyard/: README.md  button_callback_order.py  button_callback_order2.py  chat_callback_drop.py  chat_callback_drop2.py  chat_callback_drop_minimal.py  chat_callback_process.py  chat_input_callback.py  outlines_test.py  sidebar_state_app.py  text_area_app.py  textinput_callback_drop_minimal.py
data/app_data/: LICENSE.md  README  mn_general_student_queries.csv  openstax_subsection_df.parquet  openstax_subsection_embed.npy  question_sample.csv  rori_microlesson_df.parquet  rori_microlesson_embed.npy
notebook/: CosSimTiming.ipynb  EmbeddingTests.ipynb  EvaluateRetrievalImpact.ipynb  GuidedGenerationWithOutlines.ipynb  HintGenerationTests.ipynb  HintPromptEngineering.ipynb  MakeEmbeddings.ipynb  MathNationDataExploration.ipynb  MisconceptionData.ipynb  OpenStaxDataExtraction.ipynb  RoriLessonExtraction.ipynb  SQLAlchemy2Scratchpad.ipynb  Scratchpad.ipynb  WikipediaLookup.ipynb
src/: app.py  usage_demo.py  🤖_Math_QA.py
src/hint_generation/: app.py
src/llm_math_education/: chat_db.py  embedding_utils.py  env_utils.py  gpf_utils.py  logit_bias.py  misconceptions.py  openai_utils.py  openstax.py  prompt_utils.py  retrieval.py  retrieval_strategies.py
src/llm_math_education/prompts/: hints.py  mathqa.py
src/llm_math_education/resources/: dolma_stopwords.json  misconceptions.ndjson
src/pages/: 0_📝_About_this_app.py  1_💡_Hint_generation.py
src/streamlit_app/: auth_utils.py  chat_utils.py  custom_textarea.py  data_utils.py
tests/: conftest.py
tests/integration/: test_app_retrieval.py  test_streamlit.py
tests/resources/: test.env
tests/resources/openstax_prealgebra/: .gitignore
tests/unit/: conftest.py  test_chat_db.py  test_embedding_utils.py  test_env_utils.py  test_gpf_utils.py  test_hint_generation_app.py  test_logit_bias.py  test_misconceptions.py  test_openstax.py  test_prompt_utils.py  test_retrieval.py  test_retrieval_strategies.py
